--- a/gb/21/5/17/n12954328.md
+++ b/gb/21/5/17/n12954328.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kvokyz384/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kvokyz384/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kvokyz384/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kvokyz384/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kvokyz384/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kvokyz384/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【涛哥侃封神】第四十四回  子牙魂游昆仑山</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12954397-190523021746100093-600x400.jpg" />
 <h6>【涛哥侃封神】第四十四回（王嘉益／大纪元）
 </h6>
 <hr>
-<p>大家好！欢迎大家来到《<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E6%B6%9B%E5%93%A5%E4%BE%83%E5%B0%81%E7%A5%9E.md#1">涛哥侃封神</a>》。现在进入高潮了。刚想起“天、地对应”（上、下相通）的一件事：</p>
+<p>大家好！欢迎大家来到《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B6%9B%E5%93%A5%E4%BE%83%E5%B0%81%E7%A5%9E.md#1">涛哥侃封神</a>》。现在进入高潮了。刚想起“天、地对应”（上、下相通）的一件事：</p>
 <p>周文王演绎出《周易》，而他的《周易》却被姜子牙破了。文王是人（人的境界）；而“半人半神”可以形容姜子牙。</p>
 <p>文王演绎出《周易》之后才建了灵台，在灵台上，他按照《周易》才可以通晓世间善恶、好坏、一切事理。他是从下往上悟，悟到那儿就悟到头了。姜子牙呢！姜子牙来到西岐辅佐文王的时候，他的境界、道行已经高过了文王（他才可以帮助武吉逃出文王的控制），但他又是个修不成的半喇神仙（跟人一样拥有三魂七魄，正好跟文王有一个“接洽”）。他如果不具备“半神”的境界，他握不了“杏黄旗”、“打神鞭”；他如果不是人（是神的话），他封神就不灵了，因为封神的概念是“从最低的人”往上走，才能涵盖，如果姜子牙不是人，那人这一层往哪儿放？</p>
 <p>而文王的死，世间再也没有其他任何人能解释得通《周易》的同时，（周易）却又从上到下跟修行的姜子牙合上了！就是这样首尾相扣。这就是顺天意——上、下通。</p>
 <p>我们看到：闻太师在碧游宫修了五十年，师父让他下来辅佐商朝，他是作为被托孤的老臣，他拿了一个阴阳鞭（蛟龙金鞭），一雄、一雌，代表他的局限性。有朋友说：那不一定！</p>
 <p>你看到的神仙都是单身的一个（这话对神仙不尊重），成对的神仙，是有原因的……人的环境本身就代表它的局限性……被框在了阴、阳中。</p>
-<p>牵扯到神仙，人的嘴不能随便说。我只能说，《<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E5%B0%81%E7%A5%9E%E6%BC%94%E4%B9%89.md#1">封神演义</a>》是相当奥妙的。换句话说，中国人都是有相当造化的，外国人哪有《封神演义》？希腊的神话故事也不过如此，远远比不了《封神演义》里讲述的生命奥妙……真的不好说，咱们当小说说（能说的说，不能说的，咱们不说，朋友别介意）。人的层面比较低，人的嘴不能随便说，所以“沉默是金，智者无语”……因为境界不同，你的理解不同。</p>
+<p>牵扯到神仙，人的嘴不能随便说。我只能说，《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B0%81%E7%A5%9E%E6%BC%94%E4%B9%89.md#1">封神演义</a>》是相当奥妙的。换句话说，中国人都是有相当造化的，外国人哪有《封神演义》？希腊的神话故事也不过如此，远远比不了《封神演义》里讲述的生命奥妙……真的不好说，咱们当小说说（能说的说，不能说的，咱们不说，朋友别介意）。人的层面比较低，人的嘴不能随便说，所以“沉默是金，智者无语”……因为境界不同，你的理解不同。</p>
 <h2><span style="color: #008000;">西岐城外十绝阵 未见真伪魂先绝</span></h2>
 <p><strong><span style="color: #800000;">诗曰：</span></strong><br />
 <strong><span style="color: #800000;">左道妖魔事更偏，咒诅魇魅古今传。</span></strong><br />
@@ -92,7 +92,7 @@
 <p><strong><span style="color: #800000;">内有姚天君曰：“列位道兄，据贫道论起来，西岐城不过弹丸之地，姜子牙不过浅行之夫，怎经得十绝阵起！只小弟略施小术，把姜子牙处死，军中无主，西岐自然瓦解。常言蛇无头而不行，军无主而则乱。又何必区区与之较胜负哉？”</span></strong></p>
 <p><strong><span style="color: #800000;">闻太师曰：“道兄若有奇功妙术使姜尚自死又不张弓持矢，不致军士涂炭，此幸之幸矣。敢问如何治法？”</span></strong></p>
 <p><strong><span style="color: #800000;">姚天君曰：“不动声色，二十一日自然命绝。子牙纵是脱骨神仙、超凡佛祖，也难逃躲。”</span></strong></p>
-<p>“二十一日”，七天为一组，（共）三个七，（象征）三魂七魄——七的定数在人的环境中早就定了，就是那样的……问题出在你会看、不会看！你读千万本书，你未必读懂《<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E5%B0%81%E7%A5%9E%E6%BC%94%E4%B9%89.md#1">封神演义</a>》……</p>
+<p>“二十一日”，七天为一组，（共）三个七，（象征）三魂七魄——七的定数在人的环境中早就定了，就是那样的……问题出在你会看、不会看！你读千万本书，你未必读懂《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%B0%81%E7%A5%9E%E6%BC%94%E4%B9%89.md#1">封神演义</a>》……</p>
 <p>闻太师大喜，更问详细。姚斌附太师耳曰：“须如此如此，自然命绝。又何劳众道兄费心。”</p>
 <p><strong><span style="color: #800000;">闻太师喜不自胜，对众道友曰：“今日姚兄施大法力，为我闻仲治死姜尚，尚死诸将自然瓦解，功成至易。真所谓樽俎折冲，谈笑而下西岐。大抵今皇上洪福齐天，致感动列位道兄扶助。”</span></strong></p>
 <p><strong><span style="color: #800000;">众人曰：“此功让姚贤弟行之，总为闻兄，何言劳逸。”</span></strong></p>
@@ -151,8 +151,8 @@
 <p><strong><span style="color: #800000;">适有南极仙翁闲游山下，采芝炼药，猛见子牙魂魄渺渺而来，南极仙翁仔细观看，方知是子牙的魂魄。</span></strong></p>
 <p><strong><span style="color: #800000;">仙翁大惊曰：“子牙绝矣。”慌忙赶上前，一把绰住了魂魄，装在葫芦里面，塞住了葫芦口，正进玉虚宫，启掌教老师。</span></strong></p>
 <p>很显然，南极仙翁的境界足以看到人的魂魄在那里，就像有些人天目开了，偶然看见一个人影晃过去了，类似的。那有的是善的，有的是恶的，有的是鬼魂，但应该跟魂魄是相对应的。</p>
-<h2><span style="color: #008000;"><ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E8%B5%A4%E7%B2%BE%E5%AD%90.md#1">赤精子</a>抢草人 白莲险坠落魂阵</span></h2>
-<p><strong><span style="color: #800000;">才进得宫门，后面有人叫曰：“南极仙翁不要走！”仙翁及至回头看时，原来是太华山云霄洞<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E8%B5%A4%E7%B2%BE%E5%AD%90.md#1">赤精子</a>。</span></strong><br />
+<h2><span style="color: #008000;"><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B5%A4%E7%B2%BE%E5%AD%90.md#1">赤精子</a>抢草人 白莲险坠落魂阵</span></h2>
+<p><strong><span style="color: #800000;">才进得宫门，后面有人叫曰：“南极仙翁不要走！”仙翁及至回头看时，原来是太华山云霄洞<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E8%B5%A4%E7%B2%BE%E5%AD%90.md#1">赤精子</a>。</span></strong><br />
 <strong><span style="color: #800000;"> 仙翁曰：“道友那里来？”</span></strong></p>
 <p><strong><span style="color: #800000;">赤精子曰：“闲居无事，特来会你游海岛，适山岳，访仙境之高明野士，看其着棋闲耍，如何？”</span></strong></p>
 <p><strong><span style="color: #800000;">仙翁曰：“今日不得闲。”</span></strong></p>
@@ -251,7 +251,7 @@
 <p><strong><span style="color: #800000;">话说赤精子至玄都洞，见上面一联云：</span></strong><br />
 <strong><span style="color: #800000;">道判混元，曾见太极两仪生四象。</span></strong><br />
 <strong><span style="color: #800000;">鸿蒙传法，又将胡人西度出函关。</span></strong></p>
-<p>“道判混元”，这是讲老子拿着<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E5%A4%AA%E6%9E%81%E5%9B%BE.md#1">太极图</a>开天辟地。“曾见太极两仪生四象”，这就八卦出来了。老子后来往西骑着青牛出了函谷关，遇见胡人，有人说胡人根本不能超度，好像是老子去化解，出函谷关超度胡人。</p>
+<p>“道判混元”，这是讲老子拿着<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%AA%E6%9E%81%E5%9B%BE.md#1">太极图</a>开天辟地。“曾见太极两仪生四象”，这就八卦出来了。老子后来往西骑着青牛出了函谷关，遇见胡人，有人说胡人根本不能超度，好像是老子去化解，出函谷关超度胡人。</p>
 <p>老子来到人间，“鸿蒙传法”（鸿蒙跟混元是配的），“又将胡人西度出函关”，走了，首尾相扣。既是开始又是结束。这两句话就讲出了“老子的来”和“老子的去”——留下五千言《道德经》，骑了青牛，出了函谷关匆匆而去。</p>
 <p>道、法是对应的。前面是“道判”，后面是“传法”，首尾相扣。这个现代的人根本理解不到，因为都是一根筋的往前跑，那没有对生命涵义的认识就更理解不了了。</p>
 <p><strong><span style="color: #800000;">赤精子在玄都洞外，不敢擅入。等候一会，只见玄都大法师出宫外，看见赤精子，问曰：“道友到此，有什么大事？”</span></strong></p>
@@ -261,7 +261,7 @@
 <p><strong><span style="color: #800000;">玄都大法师听说，忙入宫，至蒲团前行礼，启曰：“赤精子宫门外听候法旨。”</span></strong></p>
 <p><strong><span style="color: #800000;">老子曰：“招他进来。”</span></strong></p>
 <p><strong><span style="color: #800000;">赤精子入宫，倒身下拜：“弟子愿老师万寿无疆！”</span></strong></p>
-<p><strong><span style="color: #800000;">老子曰：“你等犯了此劫，落魂阵姜尚有愆，吾之宝落魂阵亦遭此厄，都是天数。汝等谨受法戒。”叫玄都大法师：“取<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%E5%A4%AA%E6%9E%81%E5%9B%BE.md#1">太极图</a>来。”付与赤精子。“将吾此图，如此行去，自然可救姜尚。你速去罢。”</span></strong></p>
+<p><strong><span style="color: #800000;">老子曰：“你等犯了此劫，落魂阵姜尚有愆，吾之宝落魂阵亦遭此厄，都是天数。汝等谨受法戒。”叫玄都大法师：“取<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%AA%E6%9E%81%E5%9B%BE.md#1">太极图</a>来。”付与赤精子。“将吾此图，如此行去，自然可救姜尚。你速去罢。”</span></strong></p>
 <p>老子上来就跟赤精子说：“你们这些人遭此大劫，是命里注定的，都是定数、天数。姜尚是出毛病了……”</p>
 <p><strong><span style="color: #800000;">赤精子得了太极图，离了大罗宫，一时来至西岐。武王闻说赤精子回来，与众将迎迓至殿前。</span></strong></p>
 <p><strong><span style="color: #800000;">武王忙问曰：“老师那里去来？”</span></strong></p>
@@ -324,54 +324,54 @@
 <p><strong><span style="color: #800000;">彼此互相推让。正说间，只见半空中有鹿鸣，异香满地，遍处氤氲。不知是谁来至，且听下回分解。<br />
 </span></strong><br />
 ◇（待续）</p>
-<p>（点阅<ahref="https://github.com/kvokyz384/djy/blob/master/gb/tag/%e6%bf%a4%e5%93%a5%e4%be%83%e5%b0%81%e7%a5%9e.md#1">【涛哥侃封神】</a>系列文章。）</p>
+<p>（点阅<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%e6%bf%a4%e5%93%a5%e4%be%83%e5%b0%81%e7%a5%9e.md#1">【涛哥侃封神】</a>系列文章。）</p>
 <p>责任编辑：李梅</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13603501.md#1">【涛哥侃封神】 第八十三回  三大师收狮象犼</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13575135.md#1">【涛哥侃封神】 第八十二回  三教大会万仙阵</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/24/n13525002.md#1">【涛哥侃封神】 第八十一回  子牙潼关遇痘神</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/5/n13556141.md#1">【涛哥侃封神】 第八十回  杨任下山破瘟司</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/24/n13525019.md#1">【涛哥侃封神】 第七十九回  穿云关四将被擒</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/17/n13509727.md#1">【涛哥侃封神】 第七十八回  三教会破诛仙阵</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/11/n13496152.md#1">【涛哥侃封神】 第七十七回  老子一爇化三清</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/6/n13485630.md#1">【涛哥侃封神】?第七十六回  ?郑伦捉将取汜水  ?</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/21/12/21/n13450108.md#1">【涛哥侃封神】?第七十五回  ?  土行孙盗骑陷身</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/21/12/13/n13433336.md#1">【涛哥侃封神】 第七十四回  哼哈二将显神通</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/9/n13730782.md#1">【涛哥侃封神】 第九十四回  文焕怒斩殷破败</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/5/n13727493.md#1">【涛哥侃封神】 第九十三回  金吒智取游魂关</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/25/n13719757.md#1">【涛哥侃封神】 第九十二回  杨戬哪吒收七怪</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/18/n13714116.md#1">【涛哥侃封神】?第九十一回  ?  蟠龙岭烧邬文化</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/11/n13708642.md#1">【涛哥侃封神】?第九十回  ?  子牙捉神荼郁垒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/7/n13701031.md#1">【涛哥侃封神】?第八十九回  ?  纣王敲骨剖孕妇</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/3/28/n13677356.md#1">【涛哥侃封神】 第八十八回  武王白鱼跃龙舟</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/3/25/n13672304.md#1">【涛哥侃封神】 第八十七回  土行孙夫妻阵亡</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/3/14/n13644280.md#1">【涛哥侃封神】 第八十六回  渑池县五岳归天</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/3/7/n13627655.md#1">【涛哥侃封神】 第八十五回  邓芮二侯归周主</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/21/n13594447.md#1">【思想领袖】莱博维茨：与左派断交的痛苦过程</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13611592.md#1">【新闻大家谈】俄亮核武威胁 中共幕后参与？</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/28/n13611517.md#1">【微视频】普京指苏共卖国 中国也应抓江泽民</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/26/n13606670.md#1">每个人在选择油漆颜色时都会犯的6个错误</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/kvokyz384/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/11/n13733580.md#1">听《顶碗舞》品蒙古奶茶 体验千年不变的热情</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740136.md#1">【拍案惊奇】民航系统不单纯 涉党内倒习操作？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739992.md#1">【新闻大家谈】中共催生与民斥“最后一代”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738712.md#1">张艺兴在节目中发烧 疑未通报做核酸检测惹议</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739082.md#1">为什么你不应该忍便？ 专家这么说</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kvokyz384/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kvokyz384/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/17/n12954328.htm">【涛哥侃封神】第四十四回  子牙魂游昆仑山</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/17/n12954328.htm">【涛哥侃封神】第四十四回  子牙魂游昆仑山</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kvokyz384/djy/blob/master/gb/21/5/17/n12954328.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kvokyz384/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kvokyz384/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kvokyz384/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kvokyz384/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/5/17/n12954328.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
