--- a/gb/21/5/10/n12935711.md
+++ b/gb/21/5/10/n12935711.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【拍案惊奇】习攻台被泼冷水 SARS武器化被曝光</h2>
-<a href="https://d2fq83y0z2h6n4.cloudfront.net/I3vZ8LjXx"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1z1i6xmekcnf1.cloudfront.net/W0qZ8LjXf"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年05月10日讯】大家好，欢迎收看《<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》，我是大宇。</p>
+	<p>【大纪元2021年05月10日讯】大家好，欢迎收看《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》，我是大宇。</p>
 <p>今日焦点：传美国务院获重磅密件：生物战！习喊疯话？要党百毒不侵；官媒避讳，维尼改名“噗噗”；共军又进犯韩国岛屿；攻台四难，习近平被泼冷水；环球：远程飞弹炸澳洲；大阪死亡率超印度；日本现神秘光柱；中共火箭坠马尔代夫</p>
 <p>今天在美东时间仍是5月9日“母亲节”，再次祝各位母亲节日快乐！同时，我们的母亲节“给妈妈做美食活动”也进入尾声，美东时间5月10日中午12点前将截止，不再接收投寄的作品，也就是台湾时间的5月10日晚上12点以前。我再简单重复一下活动形式：请您给妈妈做一份食物，然后用手机给食物录制一段不超过1分钟的影片，要是您忙的话，几秒钟也行，然后把影片发到我们的活动专属信箱 dayuevent@gmail.com。我们会在10日当晚公布发来的影片，接着大家一起评选，优胜者会得到奖品。我们的活动口号是：妈妈很辛苦，食物我来煮。其实台湾现在母亲节应该已经过去了，大家有时间的，就请尽量参与吧，毕竟孝敬妈妈是一个日常的事嘛。</p>
 <p>现在我们就进入今天节目环节。</p>
-<p><center><a src=""></a><a href="https://d2fq83y0z2h6n4.cloudfront.net/I3vZ8LjXx"><img width="600" src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/b17cf263-77ae-4e14-95e9-fa05d6aae828?r=16x9&amp;d=1182" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
+<p><center><a src=""></a><a href="https://d1z1i6xmekcnf1.cloudfront.net/W0qZ8LjXf"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/b17cf263-77ae-4e14-95e9-fa05d6aae828?r=16x9&amp;d=1182" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a><center></center></center></p>
 <h2>【日本天空现神秘光柱 中共火箭坠马尔代夫】</h2>
 <p>大家先来看一下这些图片，是否感觉很奇特。这是5月6日晚在日本福井县内的部分地区，人们拍到的天空上的“神秘光柱”，因此引起不少人好奇，拿起手机拍摄。有日本媒体解释说，这可能是大气的一种光学反应，推断是岸边的渔船光线通过云层中的冰晶反射而形成，但这种解释未免有一点牵强。不过这种现象也不是第一次出现，以前也出现过，名字就叫“渔火光柱”。就在人们讨论光柱现象的同时，5月7日，日本兵库县北部也出现了这种神秘光柱。</p>
-<p>但是好在这些光柱不是要落到地面上的什么东西，对人们没有构成危险。但是在美国密苏里州、土耳其的伊斯坦布尔还有沙特等全球多个地点的民众，在过去几天都拍到了天空中的一种“神秘光点”，但是您要是看到新闻的报导，就不会觉得这个光点神秘了。这正是中共的长征5号<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%81%AB%E7%AE%AD%E6%AE%8B%E9%AA%B8.md#1">火箭残骸</a>，以每小时29000公里的速度绕地球飞行，美国军方之前密切关注它的落点和落地时间，多个国家的相关机构都很紧张，担心这火箭残骸变成从天而来的“飞弹”。</p>
+<p>但是好在这些光柱不是要落到地面上的什么东西，对人们没有构成危险。但是在美国密苏里州、土耳其的伊斯坦布尔还有沙特等全球多个地点的民众，在过去几天都拍到了天空中的一种“神秘光点”，但是您要是看到新闻的报导，就不会觉得这个光点神秘了。这正是中共的长征5号<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%81%AB%E7%AE%AD%E6%AE%8B%E9%AA%B8.md#1">火箭残骸</a>，以每小时29000公里的速度绕地球飞行，美国军方之前密切关注它的落点和落地时间，多个国家的相关机构都很紧张，担心这火箭残骸变成从天而来的“飞弹”。</p>
 <p>而且这是近三十年来以来最大的太空垃圾，返回大气层前，这颗火箭有将近10层楼高，进入大气层之后，燃烧破碎成一些碎片。5月9日，这个悬在人们头顶的警报终于解除，当地时间上午10点24分，也是美东时间5月8日晚上8点多，这颗中共火箭的残骸掉落在印度洋旅游胜地马尔代夫的一个岛屿附近，距离有人居住的地区仅42公里，稍稍偏一点点，可能就砸到人了。</p>
 <h2>【NASA谴责中共不透明 杭州豹子“越狱”也瞒报】</h2>
 <p>对此，美国航空航天局NASA发布声明，谴责中共。声明中说，“从事外太空活动的国家，必须将太空物体重回地球对人类和财产造成的风险降至最低”，“显然中共在处理他们的太空残骸方面没有达到负责任的标准。”这已经是说得很客气了。</p>
@@ -22,7 +22,7 @@
 <p>截至目前，三只金钱豹已经抓回两只，其中第二只被抓的时候，遭到搜救犬的“围攻”，一开始有消息说被狗咬死了，但是大陆媒体又“辟谣”说，没有咬死，是打了麻醉枪，然后抓住了。还有第三只还在抓。</p>
 <p>有人拍照拍到被狗咬的那只金钱豹，后来关在笼子里，满眼含着热泪，可怜巴巴，它还未成年欸。</p>
 <p>目前没有听到媒体报导说金钱豹伤害了人类，不知道这三只金钱豹是不是也受不了“专制”，想跑到什么地方“投奔自由”。</p>
-<h2>【传美发现中共文件！要把<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/sars%E6%AD%A6%E5%99%A8%E5%8C%96.md#1">SARS武器化</a> 武汉研究投放】</h2>
+<h2>【传美发现中共文件！要把<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/sars%E6%AD%A6%E5%99%A8%E5%8C%96.md#1">SARS武器化</a> 武汉研究投放】</h2>
 <p>在中共治下，“隐瞒”成了一个理所应当的行为，为“避免恐慌”可以隐瞒，为了党官利益可以隐瞒，为了政权安全也可以隐瞒，现在人们最关心的就是中共对病毒真相的隐瞒。</p>
 <p>5月8日，英国《每日邮报》报导说，美国国务院的调查人员发现了中共军方研究人员在2015年制作的一份文件，名称是“SARS病毒的非正常起源 作为基因生物武器的人造新病毒物种”。这份文件内容显示，2015年，中共军方研究人员就在探讨将SARS病毒“武器化”，宣称SARS病毒预示着一个“新基因武器时代”，还不知道依据什么，回顾说，一战是化学战，二战是核武战，所以第三次世界大战就该是“生物战”，文件中明明白白写着，他们要把SARS病毒改造成新型致命病毒，把它武器化，然后以一种前所未有的方式释放出去。</p>
 <p>文件讨论得非常细致，甚至还提到什么时间释放病毒好。比如当中说，应该在半夜或者多云的时候投放，因为怕日照使病原体失效，也担心雨雪会影响气溶胶传播，所以要选择缺少阳光也没有雨雪的天气，并说希望这种病毒可以击溃所谓“敌国”的医疗系统。</p>
@@ -38,7 +38,7 @@
 <h2>【亚洲还有七国疫情严重！柬埔寨老挝沦陷】</h2>
 <p>首先是靠近印度的尼泊尔，该国红十字会主席蒂姆西纳（Netra Prasad Timsina）发声明说，如果尼泊尔不能控制好疫病传播，那么印度的今天就是尼泊尔的明天，也有尼泊尔人将本国疫病攀升归咎于往该国逃难的印度人，因为最近几周，一些印度人为了躲避汹涌的疫情，逃到了尼泊尔或周边其它国家。</p>
 <p>还有跟印度隔海相望的斯里兰卡，但是这里强烈扩散的病毒却并不是印度的中共病毒变种毒株，而是英国的变种毒株。4月27日，斯里兰卡单日确诊达到1,111例，到了5月7日，已经上升到1,895例，已经暴增到4月初的5倍，目前斯里兰卡全国大部分地区封闭，也对印度封关了。</p>
-<p>刚刚我们提到的，差点被中共<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E7%81%AB%E7%AE%AD%E6%AE%8B%E9%AA%B8.md#1">火箭残骸</a>砸到陆地的马尔代夫，病例也在增加，过去几天的相关住院人数比以往增加了2倍。当地部分地区开始实施宵禁，想抑制病毒传播。</p>
+<p>刚刚我们提到的，差点被中共<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%81%AB%E7%AE%AD%E6%AE%8B%E9%AA%B8.md#1">火箭残骸</a>砸到陆地的马尔代夫，病例也在增加，过去几天的相关住院人数比以往增加了2倍。当地部分地区开始实施宵禁，想抑制病毒传播。</p>
 <p>东南亚的柬埔寨和泰国也变得严重。柬埔寨的疫病，在今年2月以前，在全球看，一直是比较轻的，而且1例死亡都没有，但是2月底开始爆发，出现了累计500个病例，到现在，已经暴增到18,717例，死亡也达到114例。柬埔寨的邻国老挝也在5月9日通报了该国第一个中共病毒爆发以来的死亡病例。</p>
 <h2>【泰国康复者刚出院暴毙 日本大阪死者超印度】</h2>
 <p>而在泰国，状况也不乐观。最近还有一个引起媒体关注的案例，一名62岁的泰国曼谷男子在染疫后住院治疗，5月7日，医生说“康复”了，但是他离开医院后，突然在距离家门口50米的地方暴毙身亡，现在泰方正进行尸检，如果仍由病毒引发，是够恐怖的，说明这种病毒非常难缠。</p>
@@ -46,7 +46,7 @@
 <p>现在疫情发展最引人关注的还有日本，这是一个还要在今年举办奥运会的国家。根据5月9日的通报，日本单日超过6,000人确诊，仅在东京一地就有一千多人。特别是在日本大阪，每100万人中，就有19.6人死亡，比印度公开报导的15.5人还要多！为此，大阪和东京、京都、兵库、爱知等地纷纷将紧急状态延长到5月底。</p>
 <h2>【日本人游行抵制奥运 印度要参赛 网友喊停】</h2>
 <p>由于瘟疫状况未见好转，有日本民众上街游行示威，呼吁政府在疫病这么紧张的情况下，停止举办奥运。5月9日，很多日本人在东京主场馆新国立竞技场外游行，网上还有超过25万人联署抗议。日本《读卖新闻》的民调也显示，59%的日本人要求政府考虑民众健康，中止办奥运。</p>
-<p>印度奥委会主席前一天还对媒体说，印度参加日本<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90.md#1">东京奥运</a>的运动员们已经做好“完全准备”，希望东京奥运如期举办，但是不少日本网友却被吓到，在网上留言说：别来别来！</p>
+<p>印度奥委会主席前一天还对媒体说，印度参加日本<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90.md#1">东京奥运</a>的运动员们已经做好“完全准备”，希望东京奥运如期举办，但是不少日本网友却被吓到，在网上留言说：别来别来！</p>
 <p>这是目前中共病毒在亚洲一些国家的流行情况。而中共此时却又吹捧自己。</p>
 <h2>【习喊要练就“百毒不侵之身” 维尼变身“噗噗熊”】</h2>
 <p>党媒《求是》刊登了习近平在今年年初的讲话，提到他用“乱”字形容其它国家，并且利用疫病大流行吹捧所谓制度优势，其实中共所谓的制度优势就是“隐瞒”、“不报”、“制造数字”，同时强力打压真实声音。</p>
@@ -57,7 +57,7 @@
 <p>“自由亚洲”最近采访军事观察人士亓乐义时也说，中共武力犯台的紧迫感确实比过去这么多年更加紧迫。</p>
 <p>但是，中共到底有没有这本事呢？</p>
 <h2>【北京攻台四大难点 共军侵略“备战”比打仗还难！】</h2>
-<p>大纪元5月8日报导了台湾的“国家政策研究基金会高级助理研究员”揭仲的最新演说内容，他认为，共军<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E6%AD%A6%E5%8A%9B%E4%BE%B5%E5%8F%B0.md#1">武力侵台</a>要付出巨大成本，军事、外交、内政都会受影响，特别是如果美国一旦参战，更对中共不利。</p>
+<p>大纪元5月8日报导了台湾的“国家政策研究基金会高级助理研究员”揭仲的最新演说内容，他认为，共军<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%AD%A6%E5%8A%9B%E4%BE%B5%E5%8F%B0.md#1">武力侵台</a>要付出巨大成本，军事、外交、内政都会受影响，特别是如果美国一旦参战，更对中共不利。</p>
 <p>揭仲说，大陆有的学者对台湾国军的防御能力比台湾人自己看得都高，认为国军有至少四大令共军心悸的能力，第一，是强大的战略预警能力，能在共军刚出动时，便可以发现，想“奇袭”台湾很难，前些日子橡皮艇案是个问题，但是一个橡皮艇很难成事，必须是很多，但那样也会被国军发现，况且橡皮艇案后，国军正在加强追踪防御；第二，是国军“联合制压作战”，有能力跨越海峡，直捣共军在大陆东南部的军事目标；第三，是国军的“联合防空体系”，会对中共空中力量造成很大挫折；第四，就是国军本身的“防卫体系”，大陆也有专家认为做得很不错，共军想进犯，也势必严重伤害自身。</p>
 <p>同时，揭仲指出，现在共军本身的问题也不少，比如战舰预警能力低、海洋监视和追踪覆盖率不足，而且若要开战，第一波投到台湾的兵力可能只有大约4到6个旅，但是标准的投放能力应该要达到12到15个旅，共军还做不到。而共军想打台湾，飞弹和船舰飞机的数量不关键，最关键的是后勤补给能力。</p>
 <p>有学者早就算了一笔账，共军要打台湾，需要发动几十万兵力，同时要配备物资三千万吨，仅是登岛作战，每天的油料就需要63万公斤，有专家预计，战事至少也要持续30天，而开战后，预估中共伤兵会达到12万人，也需要足够的医疗物资。这么庞大的物质需求，中共要三千多辆火车、2,200架次的飞机和7,800次的航运甚至上百万次的汽车运输才能完成，是一项相当复杂的工程。</p>
@@ -70,48 +70,48 @@
 <p>而且在台海、东海、南海挑事还不够，根据“新《番薯藤》国防军事网”发布的消息，中共又看中了韩国西北部、靠近朝鲜的白翎岛，最近派了越来越多的船只和战舰前往骚扰。</p>
 <p>这篇推文很幽默地说，习近平‘总加速师’不是白喊的，没把所有国家都得罪一遍不甘心，看来‘新八国联军’的出现指日可待。</p>
 <p>好，我在Telegram上的观众讨论群是t.me/xwpajq_us，节目信箱是xwpajq@gmail.com。会员部分，我们全部转到了网站YouLucky上，链接我已经在留言区置顶。也欢迎您订阅本频道，并点击小铃铛，获得节目发布通知。那今天节目就到这里，感谢您的收看，我们下期再会！</p>
-<p>《<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》制作组</p>
+<p>《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/4/30/n12915264.md#1">【拍案惊奇】白宫遭声波攻击？拜登演讲斯科特走红</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/5/1/n12917976.md#1">【拍案惊奇】山东号停滞？清末学者预言中共结局</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/5/3/n12920471.md#1">【拍案惊奇】防务漏洞？陆男乘皮艇一路进台湾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/5/4/n12922533.md#1">【拍案惊奇】李克强职位或变 辽宁号监造者出事</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/4/30/n12915264.md#1">【拍案惊奇】白宫遭声波攻击？拜登演讲斯科特走红</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/1/n12917976.md#1">【拍案惊奇】山东号停滞？清末学者预言中共结局</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/3/n12920471.md#1">【拍案惊奇】防务漏洞？陆男乘皮艇一路进台湾</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/21/5/4/n12922533.md#1">【拍案惊奇】李克强职位或变 辽宁号监造者出事</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10919284.md#1" target="_blank">陋兰：当告密者成为英雄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/4/n11843021.md#1">武汉瘟疫治寻根  历史天象醒今人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/20/n13591006.md#1">男子濒死期间进入另外空间 后奇迹般复活</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/26/n13606434.md#1">【车评】廉价轿跑 2022 Honda Civic Hatchback Sport Touring</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605189.md#1">【新闻大家谈】比铁链女惨 东北女黑窝生死劫?</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600282.md#1">【更新】俄宣战 乌克兰多城遭袭 国际回应</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602565.md#1">【微视频】普京：共产党惹的祸 乌克兰也这么想</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600024.md#1">香港娱乐圈爆发疫情 逾10名艺人确诊染疫</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13599881.md#1">容祖儿卖香港一处豪宅套现 亏损逾百万港币</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/18/n13586699.md#1">【奇医】神医的再传弟子 看病有慧眼立奇功</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602257.md#1">早期胃癌难发现 八个症状需警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/11/n13733580.md#1">听《顶碗舞》品蒙古奶茶 体验千年不变的热情</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740136.md#1">【拍案惊奇】民航系统不单纯 涉党内倒习操作？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739992.md#1">【新闻大家谈】中共催生与民斥“最后一代”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738712.md#1">张艺兴在节目中发烧 疑未通报做核酸检测惹议</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739082.md#1">为什么你不应该忍便？ 专家这么说</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/10/n12935711.htm">【拍案惊奇】习攻台被泼冷水 SARS武器化被曝光</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/5/10/n12935711.htm">【拍案惊奇】习攻台被泼冷水 SARS武器化被曝光</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/21/5/10/n12935711.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/5/10/n12935711.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
